// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CallControlConsultComponent Snapshots Interactions should call mockEndConsultCall when cancel button is clicked 1`] = `
<div
  class="call-control-consult"
>
  <div
    class="consult-header"
  >
    <mdc-avatar
      class="task-avatar"
      size="32"
    />
    <div>
      <mdc-text
        class="md-text-wrapper consult-agent-name"
        tagname="p"
        type="body-large-bold"
      >
        Alice
      </mdc-text>
      <mdc-text
        class="md-text-wrapper consult-sub-text"
        tagname="p"
        type="body-midsize-regular"
      >
        Consulting
         • 
        <time
          class="task-text task-text--secondary"
          datetime="00:00"
        >
          00:00
        </time>
      </mdc-text>
    </div>
  </div>
  <div
    class="consult-buttons consult-buttons-container"
  >
    <button
      aria-describedby="react-aria-:r14:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="mute-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="microphone-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r14:"
    >
      <p>
        Mute
      </p>
    </div>
    <button
      aria-describedby="react-aria-:r15:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="transfer-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="next-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r15:"
    >
      <p>
        Transfer Consult
      </p>
    </div>
    <button
      aria-describedby="react-aria-:r16:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="conference-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="call-merge-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r16:"
    >
      <p>
        Consult Conference
      </p>
    </div>
    <button
      aria-describedby="react-aria-:r17:"
      class="md-button-circle-wrapper call-control-consult-button-cancel md-button-simple-wrapper md-focus-ring-wrapper children"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="cancel-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-consult-button-cancel-icon"
        name="headset-muted-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r17:"
    >
      <p>
        End Consult
      </p>
    </div>
    <div
      data-tippy-root=""
      id="tippy-40"
      style="pointer-events: none; z-index: 9999; transition: none; position: absolute; left: 0px; top: 0px; margin: 0px;"
    />
  </div>
</div>
`;

exports[`CallControlConsultComponent Snapshots Interactions should call mockOnToggleConsultMute when mute button is clicked 1`] = `
<div
  class="call-control-consult"
>
  <div
    class="consult-header"
  >
    <mdc-avatar
      class="task-avatar"
      size="32"
    />
    <div>
      <mdc-text
        class="md-text-wrapper consult-agent-name"
        tagname="p"
        type="body-large-bold"
      >
        Alice
      </mdc-text>
      <mdc-text
        class="md-text-wrapper consult-sub-text"
        tagname="p"
        type="body-midsize-regular"
      >
        Consulting
         • 
        <time
          class="task-text task-text--secondary"
          datetime="00:00"
        >
          00:00
        </time>
      </mdc-text>
    </div>
  </div>
  <div
    class="consult-buttons consult-buttons-container"
  >
    <button
      aria-describedby="react-aria-:rs:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper md-focus-ring-wrapper-disabled"
      data-color="primary"
      data-disabled="true"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="mute-consult-btn"
      disabled=""
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="microphone-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:rs:"
    >
      <p>
        Mute
      </p>
    </div>
    <button
      aria-describedby="react-aria-:rt:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="transfer-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="next-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:rt:"
    >
      <p>
        Transfer Consult
      </p>
    </div>
    <button
      aria-describedby="react-aria-:ru:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="conference-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="call-merge-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:ru:"
    >
      <p>
        Consult Conference
      </p>
    </div>
    <button
      aria-describedby="react-aria-:rv:"
      class="md-button-circle-wrapper call-control-consult-button-cancel md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="cancel-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-consult-button-cancel-icon"
        name="headset-muted-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:rv:"
    >
      <p>
        End Consult
      </p>
    </div>
    <div
      data-tippy-root=""
      id="tippy-29"
      style="pointer-events: none; z-index: 9999; transition: none; position: absolute; left: 0px; top: 0px; margin: 0px; transform: translate(0px, 0px);"
    />
  </div>
</div>
`;

exports[`CallControlConsultComponent Snapshots Interactions should call mockOnTransfer when transfer button is clicked 1`] = `
<div
  class="call-control-consult"
>
  <div
    class="consult-header"
  >
    <mdc-avatar
      class="task-avatar"
      size="32"
    />
    <div>
      <mdc-text
        class="md-text-wrapper consult-agent-name"
        tagname="p"
        type="body-large-bold"
      >
        Alice
      </mdc-text>
      <mdc-text
        class="md-text-wrapper consult-sub-text"
        tagname="p"
        type="body-midsize-regular"
      >
        Consulting
         • 
        <time
          class="task-text task-text--secondary"
          datetime="00:00"
        >
          00:00
        </time>
      </mdc-text>
    </div>
  </div>
  <div
    class="consult-buttons consult-buttons-container"
  >
    <button
      aria-describedby="react-aria-:r10:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="mute-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="microphone-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r10:"
    >
      <p>
        Mute
      </p>
    </div>
    <button
      aria-describedby="react-aria-:r11:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper md-focus-ring-wrapper children"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="transfer-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="next-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r11:"
    >
      <p>
        Transfer Consult
      </p>
    </div>
    <button
      aria-describedby="react-aria-:r12:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="conference-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="call-merge-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r12:"
    >
      <p>
        Consult Conference
      </p>
    </div>
    <button
      aria-describedby="react-aria-:r13:"
      class="md-button-circle-wrapper call-control-consult-button-cancel md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="cancel-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-consult-button-cancel-icon"
        name="headset-muted-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r13:"
    >
      <p>
        End Consult
      </p>
    </div>
    <div
      data-tippy-root=""
      id="tippy-34"
      style="pointer-events: none; z-index: 9999; transition: none; position: absolute; left: 0px; top: 0px; margin: 0px;"
    />
  </div>
</div>
`;

exports[`CallControlConsultComponent Snapshots Rendering - Tests for UI elements and visual states of CallControlConsult component should render the component with all control buttons 1`] = `
<div
  class="call-control-consult"
>
  <div
    class="consult-header"
  >
    <mdc-avatar
      class="task-avatar"
      size="32"
    />
    <div>
      <mdc-text
        class="md-text-wrapper consult-agent-name"
        tagname="p"
        type="body-large-bold"
      >
        Alice
      </mdc-text>
      <mdc-text
        class="md-text-wrapper consult-sub-text"
        tagname="p"
        type="body-midsize-regular"
      >
        Consulting
         • 
        <time
          class="task-text task-text--secondary"
          datetime="00:00"
        >
          00:00
        </time>
      </mdc-text>
    </div>
  </div>
  <div
    class="consult-buttons consult-buttons-container"
  >
    <button
      aria-describedby="react-aria-:r0:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="mute-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="microphone-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r0:"
    >
      <p>
        Mute
      </p>
    </div>
    <button
      aria-describedby="react-aria-:r1:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="transfer-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="next-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r1:"
    >
      <p>
        Transfer Consult
      </p>
    </div>
    <button
      aria-describedby="react-aria-:r2:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="conference-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="call-merge-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r2:"
    >
      <p>
        Consult Conference
      </p>
    </div>
    <button
      aria-describedby="react-aria-:r3:"
      class="md-button-circle-wrapper call-control-consult-button-cancel md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="cancel-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-consult-button-cancel-icon"
        name="headset-muted-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r3:"
    >
      <p>
        End Consult
      </p>
    </div>
  </div>
</div>
`;

exports[`CallControlConsultComponent Snapshots Rendering - Tests for UI elements and visual states of CallControlConsult component should render when consultCompleted is false 1`] = `
<div
  class="call-control-consult"
>
  <div
    class="consult-header"
  >
    <mdc-avatar
      class="task-avatar"
      size="32"
    />
    <div>
      <mdc-text
        class="md-text-wrapper consult-agent-name"
        tagname="p"
        type="body-large-bold"
      >
        Alice
      </mdc-text>
      <mdc-text
        class="md-text-wrapper consult-sub-text"
        tagname="p"
        type="body-midsize-regular"
      >
        Consult requested
         • 
        <time
          class="task-text task-text--secondary"
          datetime="00:00"
        >
          00:00
        </time>
      </mdc-text>
    </div>
  </div>
  <div
    class="consult-buttons consult-buttons-container"
  >
    <button
      aria-describedby="react-aria-:ri:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="mute-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="microphone-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:ri:"
    >
      <p>
        Mute
      </p>
    </div>
    <button
      aria-describedby="react-aria-:rj:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="true"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="transfer-consult-btn"
      disabled=""
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="next-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:rj:"
    >
      <p>
        Transfer Consult
      </p>
    </div>
    <button
      aria-describedby="react-aria-:rk:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="true"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="conference-consult-btn"
      disabled=""
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="call-merge-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:rk:"
    >
      <p>
        Consult Conference
      </p>
    </div>
    <button
      aria-describedby="react-aria-:rl:"
      class="md-button-circle-wrapper call-control-consult-button-cancel md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="cancel-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-consult-button-cancel-icon"
        name="headset-muted-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:rl:"
    >
      <p>
        End Consult
      </p>
    </div>
  </div>
</div>
`;

exports[`CallControlConsultComponent Snapshots Rendering - Tests for UI elements and visual states of CallControlConsult component should render when isAgentBeingConsulted is false 1`] = `
<div
  class="call-control-consult"
>
  <div
    class="consult-header"
  >
    <mdc-avatar
      class="task-avatar"
      size="32"
    />
    <div>
      <mdc-text
        class="md-text-wrapper consult-agent-name"
        tagname="p"
        type="body-large-bold"
      >
        Alice
      </mdc-text>
      <mdc-text
        class="md-text-wrapper consult-sub-text"
        tagname="p"
        type="body-midsize-regular"
      >
        Consulting
         • 
        <time
          class="task-text task-text--secondary"
          datetime="00:00"
        >
          00:00
        </time>
      </mdc-text>
    </div>
  </div>
  <div
    class="consult-buttons consult-buttons-container"
  >
    <button
      aria-describedby="react-aria-:rm:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="mute-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="microphone-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:rm:"
    >
      <p>
        Mute
      </p>
    </div>
    <button
      aria-describedby="react-aria-:rn:"
      class="md-button-circle-wrapper call-control-consult-button-cancel md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="cancel-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-consult-button-cancel-icon"
        name="headset-muted-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:rn:"
    >
      <p>
        End Consult
      </p>
    </div>
  </div>
</div>
`;

exports[`CallControlConsultComponent Snapshots Rendering - Tests for UI elements and visual states of CallControlConsult component should render when isEndConsultEnabled is false 1`] = `
<div
  class="call-control-consult"
>
  <div
    class="consult-header"
  >
    <mdc-avatar
      class="task-avatar"
      size="32"
    />
    <div>
      <mdc-text
        class="md-text-wrapper consult-agent-name"
        tagname="p"
        type="body-large-bold"
      >
        Alice
      </mdc-text>
      <mdc-text
        class="md-text-wrapper consult-sub-text"
        tagname="p"
        type="body-midsize-regular"
      >
        Consulting
         • 
        <time
          class="task-text task-text--secondary"
          datetime="00:00"
        >
          00:00
        </time>
      </mdc-text>
    </div>
  </div>
  <div
    class="consult-buttons consult-buttons-container"
  >
    <button
      aria-describedby="react-aria-:ro:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="mute-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="microphone-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:ro:"
    >
      <p>
        Mute
      </p>
    </div>
    <button
      aria-describedby="react-aria-:rp:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="transfer-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="next-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:rp:"
    >
      <p>
        Transfer Consult
      </p>
    </div>
    <button
      aria-describedby="react-aria-:rq:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="conference-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="call-merge-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:rq:"
    >
      <p>
        Consult Conference
      </p>
    </div>
    <button
      aria-describedby="react-aria-:rr:"
      class="md-button-circle-wrapper call-control-consult-button-cancel md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="cancel-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-consult-button-cancel-icon"
        name="headset-muted-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:rr:"
    >
      <p>
        End Consult
      </p>
    </div>
  </div>
</div>
`;

exports[`CallControlConsultComponent Snapshots Rendering - Tests for UI elements and visual states of CallControlConsult component should render with different agent name 1`] = `
<div
  class="call-control-consult"
>
  <div
    class="consult-header"
  >
    <mdc-avatar
      class="task-avatar"
      size="32"
    />
    <div>
      <mdc-text
        class="md-text-wrapper consult-agent-name"
        tagname="p"
        type="body-large-bold"
      >
        Bob Johnson
      </mdc-text>
      <mdc-text
        class="md-text-wrapper consult-sub-text"
        tagname="p"
        type="body-midsize-regular"
      >
        Consulting
         • 
        <time
          class="task-text task-text--secondary"
          datetime="00:00"
        >
          00:00
        </time>
      </mdc-text>
    </div>
  </div>
  <div
    class="consult-buttons consult-buttons-container"
  >
    <button
      aria-describedby="react-aria-:re:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="mute-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="microphone-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:re:"
    >
      <p>
        Mute
      </p>
    </div>
    <button
      aria-describedby="react-aria-:rf:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="transfer-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="next-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:rf:"
    >
      <p>
        Transfer Consult
      </p>
    </div>
    <button
      aria-describedby="react-aria-:rg:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="conference-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="call-merge-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:rg:"
    >
      <p>
        Consult Conference
      </p>
    </div>
    <button
      aria-describedby="react-aria-:rh:"
      class="md-button-circle-wrapper call-control-consult-button-cancel md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="cancel-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-consult-button-cancel-icon"
        name="headset-muted-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:rh:"
    >
      <p>
        End Consult
      </p>
    </div>
  </div>
</div>
`;

exports[`CallControlConsultComponent Snapshots Rendering - Tests for UI elements and visual states of CallControlConsult component should render with muted state 1`] = `
<div
  class="call-control-consult"
>
  <div
    class="consult-header"
  >
    <mdc-avatar
      class="task-avatar"
      size="32"
    />
    <div>
      <mdc-text
        class="md-text-wrapper consult-agent-name"
        tagname="p"
        type="body-large-bold"
      >
        Alice
      </mdc-text>
      <mdc-text
        class="md-text-wrapper consult-sub-text"
        tagname="p"
        type="body-midsize-regular"
      >
        Consulting
         • 
        <time
          class="task-text task-text--secondary"
          datetime="00:00"
        >
          00:00
        </time>
      </mdc-text>
    </div>
  </div>
  <div
    class="consult-buttons consult-buttons-container"
  >
    <button
      aria-describedby="react-aria-:r4:"
      class="md-button-circle-wrapper call-control-button-muted md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="mute-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-muted-icon"
        name="microphone-muted-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r4:"
    >
      <p>
        Unmute
      </p>
    </div>
    <button
      aria-describedby="react-aria-:r5:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="transfer-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="next-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r5:"
    >
      <p>
        Transfer Consult
      </p>
    </div>
    <button
      aria-describedby="react-aria-:r6:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="conference-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="call-merge-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r6:"
    >
      <p>
        Consult Conference
      </p>
    </div>
    <button
      aria-describedby="react-aria-:r7:"
      class="md-button-circle-wrapper call-control-consult-button-cancel md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="cancel-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-consult-button-cancel-icon"
        name="headset-muted-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r7:"
    >
      <p>
        End Consult
      </p>
    </div>
  </div>
</div>
`;

exports[`CallControlConsultComponent Snapshots Rendering - Tests for UI elements and visual states of CallControlConsult component should render without mute button when muteUnmute is false 1`] = `
<div
  class="call-control-consult"
>
  <div
    class="consult-header"
  >
    <mdc-avatar
      class="task-avatar"
      size="32"
    />
    <div>
      <mdc-text
        class="md-text-wrapper consult-agent-name"
        tagname="p"
        type="body-large-bold"
      >
        Alice
      </mdc-text>
      <mdc-text
        class="md-text-wrapper consult-sub-text"
        tagname="p"
        type="body-midsize-regular"
      >
        Consulting
         • 
        <time
          class="task-text task-text--secondary"
          datetime="00:00"
        >
          00:00
        </time>
      </mdc-text>
    </div>
  </div>
  <div
    class="consult-buttons consult-buttons-container"
  >
    <button
      aria-describedby="react-aria-:r8:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="transfer-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="next-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r8:"
    >
      <p>
        Transfer Consult
      </p>
    </div>
    <button
      aria-describedby="react-aria-:r9:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="conference-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="call-merge-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r9:"
    >
      <p>
        Consult Conference
      </p>
    </div>
    <button
      aria-describedby="react-aria-:ra:"
      class="md-button-circle-wrapper call-control-consult-button-cancel md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="cancel-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-consult-button-cancel-icon"
        name="headset-muted-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:ra:"
    >
      <p>
        End Consult
      </p>
    </div>
  </div>
</div>
`;

exports[`CallControlConsultComponent Snapshots Rendering - Tests for UI elements and visual states of CallControlConsult component should render without transfer button when onTransfer is undefined 1`] = `
<div
  class="call-control-consult"
>
  <div
    class="consult-header"
  >
    <mdc-avatar
      class="task-avatar"
      size="32"
    />
    <div>
      <mdc-text
        class="md-text-wrapper consult-agent-name"
        tagname="p"
        type="body-large-bold"
      >
        Alice
      </mdc-text>
      <mdc-text
        class="md-text-wrapper consult-sub-text"
        tagname="p"
        type="body-midsize-regular"
      >
        Consulting
         • 
        <time
          class="task-text task-text--secondary"
          datetime="00:00"
        >
          00:00
        </time>
      </mdc-text>
    </div>
  </div>
  <div
    class="consult-buttons consult-buttons-container"
  >
    <button
      aria-describedby="react-aria-:rb:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="mute-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="microphone-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:rb:"
    >
      <p>
        Mute
      </p>
    </div>
    <button
      aria-describedby="react-aria-:rc:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="conference-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="call-merge-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:rc:"
    >
      <p>
        Consult Conference
      </p>
    </div>
    <button
      aria-describedby="react-aria-:rd:"
      class="md-button-circle-wrapper call-control-consult-button-cancel md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="cancel-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-consult-button-cancel-icon"
        name="headset-muted-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:rd:"
    >
      <p>
        End Consult
      </p>
    </div>
  </div>
</div>
`;

exports[`CallControlConsultComponent Snapshots State Management should handle combination of props: no mute, no transfer, disabled end consult 1`] = `
<div
  class="call-control-consult"
>
  <div
    class="consult-header"
  >
    <mdc-avatar
      class="task-avatar"
      size="32"
    />
    <div>
      <mdc-text
        class="md-text-wrapper consult-agent-name"
        tagname="p"
        type="body-large-bold"
      >
        Alice
      </mdc-text>
      <mdc-text
        class="md-text-wrapper consult-sub-text"
        tagname="p"
        type="body-midsize-regular"
      >
        Consulting
         • 
        <time
          class="task-text task-text--secondary"
          datetime="00:00"
        >
          00:00
        </time>
      </mdc-text>
    </div>
  </div>
  <div
    class="consult-buttons consult-buttons-container"
  >
    <button
      aria-describedby="react-aria-:r1g:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="conference-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="call-merge-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r1g:"
    >
      <p>
        Consult Conference
      </p>
    </div>
    <button
      aria-describedby="react-aria-:r1h:"
      class="md-button-circle-wrapper call-control-consult-button-cancel md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="cancel-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-consult-button-cancel-icon"
        name="headset-muted-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r1h:"
    >
      <p>
        End Consult
      </p>
    </div>
  </div>
</div>
`;

exports[`CallControlConsultComponent Snapshots State Management should handle edge case with empty agent name 1`] = `
<div
  class="call-control-consult"
>
  <div
    class="consult-header"
  >
    <mdc-avatar
      class="task-avatar"
      size="32"
    />
    <div>
      <mdc-text
        class="md-text-wrapper consult-agent-name"
        tagname="p"
        type="body-large-bold"
      />
      <mdc-text
        class="md-text-wrapper consult-sub-text"
        tagname="p"
        type="body-midsize-regular"
      >
        Consulting
         • 
        <time
          class="task-text task-text--secondary"
          datetime="00:00"
        >
          00:00
        </time>
      </mdc-text>
    </div>
  </div>
  <div
    class="consult-buttons consult-buttons-container"
  >
    <button
      aria-describedby="react-aria-:r1i:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="mute-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="microphone-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r1i:"
    >
      <p>
        Mute
      </p>
    </div>
    <button
      aria-describedby="react-aria-:r1j:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="transfer-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="next-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r1j:"
    >
      <p>
        Transfer Consult
      </p>
    </div>
    <button
      aria-describedby="react-aria-:r1k:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="conference-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="call-merge-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r1k:"
    >
      <p>
        Consult Conference
      </p>
    </div>
    <button
      aria-describedby="react-aria-:r1l:"
      class="md-button-circle-wrapper call-control-consult-button-cancel md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="cancel-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-consult-button-cancel-icon"
        name="headset-muted-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r1l:"
    >
      <p>
        End Consult
      </p>
    </div>
  </div>
</div>
`;

exports[`CallControlConsultComponent Snapshots State Management should update when isMuted prop changes 1`] = `
<div
  class="call-control-consult"
>
  <div
    class="consult-header"
  >
    <mdc-avatar
      class="task-avatar"
      size="32"
    />
    <div>
      <mdc-text
        class="md-text-wrapper consult-agent-name"
        tagname="p"
        type="body-large-bold"
      >
        Alice
      </mdc-text>
      <mdc-text
        class="md-text-wrapper consult-sub-text"
        tagname="p"
        type="body-midsize-regular"
      >
        Consulting
         • 
        <time
          class="task-text task-text--secondary"
          datetime="00:00"
        >
          00:00
        </time>
      </mdc-text>
    </div>
  </div>
  <div
    class="consult-buttons consult-buttons-container"
  >
    <button
      aria-describedby="react-aria-:r1c:"
      class="md-button-circle-wrapper call-control-button-muted md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="mute-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-muted-icon"
        name="microphone-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r1c:"
    >
      <p>
        Unmute
      </p>
    </div>
    <button
      aria-describedby="react-aria-:r1d:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="transfer-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="next-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r1d:"
    >
      <p>
        Transfer Consult
      </p>
    </div>
    <button
      aria-describedby="react-aria-:r1e:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="conference-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="call-merge-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r1e:"
    >
      <p>
        Consult Conference
      </p>
    </div>
    <button
      aria-describedby="react-aria-:r1f:"
      class="md-button-circle-wrapper call-control-consult-button-cancel md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="cancel-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-consult-button-cancel-icon"
        name="headset-muted-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r1f:"
    >
      <p>
        End Consult
      </p>
    </div>
  </div>
</div>
`;

exports[`CallControlConsultComponent Snapshots State Management should update when muteUnmute prop changes 1`] = `
<div
  class="call-control-consult"
>
  <div
    class="consult-header"
  >
    <mdc-avatar
      class="task-avatar"
      size="32"
    />
    <div>
      <mdc-text
        class="md-text-wrapper consult-agent-name"
        tagname="p"
        type="body-large-bold"
      >
        Alice
      </mdc-text>
      <mdc-text
        class="md-text-wrapper consult-sub-text"
        tagname="p"
        type="body-midsize-regular"
      >
        Consulting
         • 
        <time
          class="task-text task-text--secondary"
          datetime="00:00"
        >
          00:00
        </time>
      </mdc-text>
    </div>
  </div>
  <div
    class="consult-buttons consult-buttons-container"
  >
    <button
      aria-describedby="react-aria-:r19:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="transfer-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="next-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r19:"
    >
      <p>
        Transfer Consult
      </p>
    </div>
    <button
      aria-describedby="react-aria-:r1a:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="conference-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="call-merge-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r1a:"
    >
      <p>
        Consult Conference
      </p>
    </div>
    <button
      aria-describedby="react-aria-:r1b:"
      class="md-button-circle-wrapper call-control-consult-button-cancel md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="cancel-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-consult-button-cancel-icon"
        name="headset-muted-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r1b:"
    >
      <p>
        End Consult
      </p>
    </div>
  </div>
</div>
`;
